# dai

./: .gitignore  README.md  cai_runner.py  pyproject.toml
cai/: __main__.py  cli.py
dai/: __init__.py  __main__.py
debugai/: __init__.py
