[project]
name = "cai"
version = "0.1.0"
description = "Command AI - A CLI tool that provides AI-powered error analysis for terminal commands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
cai = "cai.cli:main"
