[project]
name = "cai"
version = "0.1.0"
description = "Command AI - A CLI tool that provides AI-powered error analysis for terminal commands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff",
]

[project.scripts]
cai = "cai.cli:main"
