[project]
name = "dai"
version = "0.1.0"
description = "Debug AI - A CLI tool that provides AI-powered error analysis for terminal commands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff",
]

[project.scripts]
dai = "dai:main"
